[UPDATE] Configuração do tamanho da foto

--- a/index.html
+++ b/index.html
@@ -155,10 +155,9 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div class="foto-perfil">
-<p><img src="images/higor.jpg" alt="Minha Foto"></p>
+<div style="text-align: center;">
+<p><img src="images/higor.jpg" alt="Foto de Higor Palote Volpi" width="300" style="border-radius: 50%;"></p>
 </div>
-<!-- | ![](images/higor.jpg)[]{width=75px} -->
 <section id="sobre-mim" class="level1">
 <h1>Sobre Mim 👨‍💻</h1>
 <p>Olá, me chamo <strong>Higor Palote Volpi</strong>, sou estudante de <strong>Ciência de Dados</strong> e interessado em <strong>Desenvolvimento de Software</strong>. Meu objetivo é me profissionalizar na área e/ou trabalhar com <strong>tratamento de dados</strong>.</p>
